# rust_fullstack

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  docker-compose.yml  renovate.json
.github/actions/cache_cargo/: action.yml
.github/workflows/: rust.yml
apps/backend/: Cargo.toml
apps/backend/src/: config.rs  main.rs
apps/backend/src/database/: mod.rs
apps/backend/src/http/: handler.rs  mod.rs  schema.rs
apps/backend/src/http/resolver/health/: query.rs
apps/frontend/admin/: Cargo.toml  index.html
apps/frontend/admin/src/: main.rs
apps/frontend/design_sys/: Cargo.toml  README.md  index.html
apps/frontend/design_sys/src/: layout.rs  main.rs
apps/frontend/design_sys/src/pages/: app_button_page.rs  app_checkbox_page.rs  app_input_page.rs  app_textarea_page.rs  app_typography_page.rs  home_page.rs  mod.rs  stack_page.rs  string_input_page.rs  typography_page.rs
apps/frontend/docs/: Cargo.toml  index.html
apps/frontend/docs/src/: layout.rs  main.rs
apps/frontend/docs/src/pages/: app_box_page.rs  app_button_page.rs  app_input_page.rs  app_radio_group_page.rs  app_typography_page.rs  home_page.rs  mod.rs  stack_page.rs
apps/frontend/employee/: Cargo.toml
apps/frontend/employee/src/: main.rs
apps/frontend/package/ui/: Cargo.toml
apps/frontend/package/ui/src/: app_box.rs  app_button.rs  app_checkbox.rs  app_input.rs  app_radio_group.rs  app_textarea.rs  app_typography.rs  lib.rs  stack.rs  string_input.rs  typography.rs
apps/frontend/web/: Cargo.toml
apps/shared/: Cargo.toml  README.md
apps/shared/src/: lib.rs
docker/api/: Dockerfile
docker/db/: Dockerfile
docker/db/conf.d/: my.cnf
docker/db/sql/: create_test_database.sql
tool/: README.md
