[package]
name = "apps_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apps_shared = { path = "../shared" }
async-graphql = "5.0.6"
async-graphql-actix-web = "5.0.6"
jsonwebtoken = "8.2.0"
actix-web = "4.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
actix-cors = "0.6.4"
sqlx = { version="0.6.2", features = [ "runtime-tokio-rustls", "postgres" ]}
tokio = { version = "1.2.6", features = ["full"] }
envy = "0.4.2"

[dev-dependencies]
actix-rt = "2.8.0"
