[package]
name = "apps_frontend_docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apps_frontend_package_ui = { path = "../package/ui" }
stylist = { version = "0.13.0", features = ["yew_integration"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
gloo = "0.11.0"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["HtmlInputElement"] }
