[package]
name = "apps_frontend_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apps_shared = { path = "../../shared" }
apps_frontend_package_ui = { path = "../package/ui" }
stylist = { version = "0.13.0", features = ["yew_integration"] }
yew = { version = "0.21.0", features = ["csr"] }
